# cf-ddns

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/actions/cargo-deb/: action.yml
.github/workflows/: build.yaml  package.yaml
debian/: cf-ddns.service  cf-ddns.yaml
misc/: bundle_macos_pkg.sh  cf-ddns.plist  cloudflare-ddns.service  cloudflare-ddns.yaml
scripts/: act_run.sh  bundle_macos_pkg.sh  install_builddeps.sh
src/: cf_client.rs  main.rs  myip.rs  network.rs
