[package]
name = "cf-ddns"
version = "0.4.3"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"
description = "A daemon to use Cloudflare as a DDNS provider"
repository = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
homepage = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
keywords = ["cloudflare", "ddns"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
documentation = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.40", features = ["macros"] }
serde_yaml = "0.9"
cloudflare = { git = "https://github.com/xgzeng/cloudflare-rs", branch = "master" }
clap = "4.5"
pnet_datalink = "0.35"

ipnetwork = "0.20"

futures-util = "0.3"

[target.'cfg(linux)'.dependencies]
rtnetlink = "0.14"
netlink-packet-route = "0.21.0"

[package.metadata.deb]
maintainer-scripts = "debian/"
assets = [
    ["debian/cf-ddns.yaml", "etc/", "600"],
    ["target/release/cf-ddns", "usr/bin/", "755"]
]
conf-files = ["/etc/cf-ddns.yaml"]
systemd-units = { enable = false }