[package]
name = "cf-ddns"
version = "0.4.5"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"
description = "A daemon to use Cloudflare as a DDNS provider"
repository = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
homepage = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
keywords = ["cloudflare", "ddns"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
documentation = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.40", features = ["macros"] }
serde_yaml = "0.9"
cloudflare = { git = "https://github.com/xgzeng/cloudflare-rs", branch = "master" }
#cloudflare ={ path = "vendor/cloudflare-rs/cloudflare" }
clap = "4.5"
pnet_datalink = "0.35"
ipnetwork = "0.20"
futures-util = "0.3"
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.19"
rtnetlink = "0.14"

[package.metadata.deb]
revision = "1"
maintainer-scripts = "debian/"
assets = [
    [
        "debian/cf-ddns.yaml",
        "etc/",
        "600",
    ],
    [
        "target/release/cf-ddns",
        "usr/bin/",
        "755",
    ],
]
conf-files = ["/etc/cf-ddns.yaml"]
systemd-units = { enable = false }